/* eslint-disable testing-library/prefer-presence-queries */
/* eslint-disable testing-library/no-node-access */
/* eslint-disable testing-library/prefer-screen-queries */
import React from 'react';
import { render, fireEvent } from '@testing-library/react';
import { Card, Player } from '../../components';

const category = 'series';
const slideRows = [
	{
		title: 'Documentaries',
		data: [
			{
				genre: 'documentaries',
				maturity: '18',
				slug: 'tiger-king',
				description: 'Tiger King description',
				id: '10003472-45b4-46b1-97b6-5146692f9784',
				title: 'Tiger King',
				docId: 'wwCjoov6vtdW1CcWGV6A',
			},
		],
	},
	{
		title: 'Feel Good',
		data: [
			{
				title: 'Juno',
				genre: 'feel-good',
				description: 'Juno description',
				maturity: '0',
				id: 'f3069c4e-cbb3-4231-843f-0dd9bc36f802',
				slug: 'juno',
				docId: 'sP9SMYI2yFXjPO0sDdPN',
			},
		],
	},
];

describe('<Card/>', () => {
	it('renders the <Card/> with populated data', () => {
		const { container, getByText } = render(
			<Card.Group>
				{slideRows.map((slideItem) => (
					<Card key={`${category}-${slideItem.title.toLowerCase()}}`}>
						<Card.Title>{slideItem.title}</Card.Title>
						<Card.Entities>
							{slideItem.data.map((item) => (
								<Card.Item key={item.docId} item={item}>
									<Card.Image
										src={`/images/${category}/${item.genre}/${item.slug}/small.jpg`}
									/>
									<Card.Meta>
										<Card.SubTitle>{item.title}</Card.SubTitle>
										<Card.Text>{item.description}</Card.Text>
									</Card.Meta>
								</Card.Item>
							))}
						</Card.Entities>
						<Card.Feature category={category}>
							<Player>
								<Player.Button />
								<Player.Video src='/videos/bunny.mp4' />
							</Player>
						</Card.Feature>
					</Card>
				))}
			</Card.Group>
		);

		expect(getByText('Documentaries')).toBeTruthy();
		expect(getByText('Tiger King')).toBeTruthy();
		expect(getByText('Tiger King description')).toBeTruthy();

		expect(getByText('Feel Good')).toBeTruthy();
		expect(getByText('Juno')).toBeTruthy();
		expect(getByText('Juno description')).toBeTruthy();

		expect(container.firstChild).toMatchSnapshot();
	});

	it('renders the <Card/> and toggles the card feature', () => {
		const { container, queryByText, getByTestId, getByAltText } = render(
			<Card.Group>
				{slideRows.map((slideItem) => (
					<Card key={`${category}-${slideItem.title.toLowerCase()}}`}>
						<Card.Title>{slideItem.title}</Card.Title>
						<Card.Entities>
							{slideItem.data.map((item) => (
								<Card.Item
									key={item.docId}
									item={item}
									data-testid={`${item.slug}-item-feature`}
								>
									<Card.Image
										src={`/images/${category}/${item.genre}/${item.slug}/small.jpg`}
									/>
									<Card.Meta>
										<Card.SubTitle>{item.title}</Card.SubTitle>
										<Card.Text>{item.description}</Card.Text>
									</Card.Meta>
								</Card.Item>
							))}
						</Card.Entities>
						<Card.Feature category={category}>
							<Player>
								<Player.Button />
								<Player.Video src='/videos/bunny.mp4' />
							</Player>
						</Card.Feature>
					</Card>
				))}
			</Card.Group>
		);

		expect(queryByText('18')).toBeFalsy();
		fireEvent.click(getByTestId('tiger-king-item-feature'));
		expect(queryByText('18')).toBeTruthy();

		fireEvent.click(getByAltText('Close'));
		expect(queryByText('18')).toBeFalsy();

		expect(queryByText('PG')).toBeFalsy();
		fireEvent.click(getByTestId('juno-item-feature'));
		expect(queryByText('PG')).toBeTruthy();

		fireEvent.click(getByAltText('Close'));
		expect(queryByText('PG')).toBeFalsy();

		expect(container.firstChild).toMatchSnapshot();
	});
});
